tests/validation/chat_quality_benchmark/runs/run_20260628T180900Z/q_safety_impossible_fiscal_quarter.error.txt
Traceback (most recent call last):
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview/.venv312/lib/python3.12/site-packages/httpx/_transports/default.py", line 69, in map_httpcore_exceptions
    yield
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview/.venv312/lib/python3.12/site-packages/httpx/_transports/default.py", line 233, in handle_request
    resp = self._pool.handle_request(req)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview/.venv312/lib/python3.12/site-packages/httpcore/_sync/connection_pool.py", line 256, in handle_request
    raise exc from None
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview/.venv312/lib/python3.12/site-packages/httpcore/_sync/connection_pool.py", line 236, in handle_request
    response = connection.handle_request(
               ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview/.venv312/lib/python3.12/site-packages/httpcore/_sync/connection.py", line 103, in handle_request
    return self._connection.handle_request(request)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview/.venv312/lib/python3.12/site-packages/httpcore/_sync/http11.py", line 136, in handle_request
    raise exc
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview/.venv312/lib/python3.12/site-packages/httpcore/_sync/http11.py", line 106, in handle_request
    ) = self._receive_response_headers(**kwargs)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview/.venv312/lib/python3.12/site-packages/httpcore/_sync/http11.py", line 177, in _receive_response_headers
    event = self._receive_event(timeout=timeout)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview/.venv312/lib/python3.12/site-packages/httpcore/_sync/http11.py", line 217, in _receive_event
    data = self._network_stream.read(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview/.venv312/lib/python3.12/site-packages/httpcore/_backends/sync.py", line 126, in read
    with map_exceptions(exc_map):
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/homebrew/Cellar/python@3.12/3.12.12_2/Frameworks/Python.framework/Versions/3.12/lib/python3.12/contextlib.py", line 158, in __exit__
    self.gen.throw(value)
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview/.venv312/lib/python3.12/site-packages/httpcore/_exceptions.py", line 14, in map_exceptions
    raise to_exc(exc) from exc
httpcore.ReadTimeout: timed out

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview-consolidation/scripts/run_chat_quality_benchmark.py", line 1561, in login
    resp = self._client.post("/v1/auth/dev-login")
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview/.venv312/lib/python3.12/site-packages/httpx/_client.py", line 1145, in post
    return self.request(
           ^^^^^^^^^^^^^
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview/.venv312/lib/python3.12/site-packages/httpx/_client.py", line 827, in request
    return self.send(request, auth=auth, follow_redirects=follow_redirects)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview/.venv312/lib/python3.12/site-packages/httpx/_client.py", line 914, in send
    response = self._send_handling_auth(
               ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview/.venv312/lib/python3.12/site-packages/httpx/_client.py", line 942, in _send_handling_auth
    response = self._send_handling_redirects(
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview/.venv312/lib/python3.12/site-packages/httpx/_client.py", line 979, in _send_handling_redirects
    response = self._send_single_request(request)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview/.venv312/lib/python3.12/site-packages/httpx/_client.py", line 1015, in _send_single_request
    response = transport.handle_request(request)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview/.venv312/lib/python3.12/site-packages/httpx/_transports/default.py", line 232, in handle_request
    with map_httpcore_exceptions():
         ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/homebrew/Cellar/python@3.12/3.12.12_2/Frameworks/Python.framework/Versions/3.12/lib/python3.12/contextlib.py", line 158, in __exit__
    self.gen.throw(value)
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview/.venv312/lib/python3.12/site-packages/httpx/_transports/default.py", line 86, in map_httpcore_exceptions
    raise mapped_exc(message) from exc
httpx.ReadTimeout: timed out

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview-consolidation/scripts/run_chat_quality_benchmark.py", line 1711, in _execute_slot
    result = client.ask(q.get("prompt") or "")
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview-consolidation/scripts/run_chat_quality_benchmark.py", line 1578, in ask
    token = self.login()
            ^^^^^^^^^^^^
  File "/Users/arnaurodon/Projects/University/final_thesis/worldview-consolidation/scripts/run_chat_quality_benchmark.py", line 1563, in login
    raise RuntimeError(f"dev-login network error: {exc}") from exc
RuntimeError: dev-login network error: timed out
